# kusanaginokajiki

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  FUNCTIONAL-SUMMARY.md  PRODUCT-REQUIREMENTS.md  PROJECT-REQUIREMENTS.md  PROTOCOL-DEEP-PARSE.md  knk-protocol-expansion-plan.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/gm-analysis/: Cargo.toml
src-tauri/crates/gm-analysis/data/: compliance_mappings.json  default_credentials.json  ics_malware_patterns.json  ot_infra_cves.json
src-tauri/crates/gm-analysis/src/: allowlist.rs  anomaly.rs  attack.rs  comm_patterns.rs  compliance.rs  context_attacks.rs  cve_matcher.rs  default_creds.rs  error.rs  infrastructure.rs  lib.rs  malware_patterns.rs  naming.rs  purdue.rs  risk.rs  switch_security.rs
src-tauri/crates/gm-capture/: Cargo.toml
src-tauri/crates/gm-capture/src/: error.rs  interface.rs  lib.rs  live.rs  packet.rs  parsing.rs  pcap_filter.rs  pcap_reader.rs
src-tauri/crates/gm-db/: Cargo.toml
src-tauri/crates/gm-db/src/: assets.rs  connections.rs  error.rs  geoip.rs  lib.rs  oui.rs  projects.rs  schema.rs  sessions.rs
src-tauri/crates/gm-ingest/: Cargo.toml
src-tauri/crates/gm-ingest/src/: error.rs  lib.rs  masscan.rs  nmap.rs  sinema.rs  suricata.rs  wazuh.rs  zeek.rs
src-tauri/crates/gm-parsers/: Cargo.toml
src-tauri/crates/gm-parsers/src/: bacnet.rs  dnp3.rs  enip.rs  iec104.rs  lib.rs  lldp.rs  modbus.rs  profinet_dcp.rs  profinet_io.rs  protocol.rs  redundancy.rs  s7comm.rs  s7comm_plus.rs  snmp.rs  vendor_tables.rs
src-tauri/crates/gm-physical/: Cargo.toml
src-tauri/crates/gm-physical/src/: aruba.rs  cisco.rs  error.rs  generic.rs  inference.rs  juniper.rs  lib.rs
src-tauri/crates/gm-report/: Cargo.toml
src-tauri/crates/gm-report/src/: csv_export.rs  error.rs  json_export.rs  lib.rs  pdf.rs  sbom.rs  stix.rs
src-tauri/crates/gm-segmentation/: Cargo.toml
src-tauri/crates/gm-segmentation/src/: enforcement.rs  error.rs  identity_groups.rs  lib.rs  matrix.rs  simulation.rs  zones.rs
src-tauri/crates/gm-signatures/: Cargo.toml
src-tauri/crates/gm-signatures/src/: engine.rs  error.rs  lib.rs  signature.rs
src-tauri/crates/gm-topology/: Cargo.toml
src-tauri/crates/gm-topology/src/: lib.rs
src-tauri/data/: oui.tsv
src-tauri/icons/: icon.icns
src-tauri/signatures/: abb_mac.yaml  bacnet.yaml  bacnet_bvlc.yaml  bacnet_generic.yaml  dnp3_generic.yaml  dnp3_start_bytes.yaml  enip_cip.yaml  ethernet_ip_generic.yaml  ethernet_ip_register_session.yaml  ge_srtp_generic.yaml  hart_ip_generic.yaml  iec104.yaml  iec104_generic.yaml  iec104_start_byte.yaml  modbus_generic.yaml  modbus_server_response.yaml  mqtt_generic.yaml  opc_ua_generic.yaml  opc_ua_hello.yaml  profinet_dcp.yaml  profinet_generic.yaml  rockwell_ethernet_ip.yaml  rockwell_mac.yaml  s7comm.yaml  s7comm_cotp_connect.yaml  s7comm_generic.yaml  schneider_mac.yaml  schneider_modbus.yaml  siemens_s7_mac.yaml  siemens_scalance.yaml  wonderware_suitelink.yaml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  baseline.rs  capture.rs  correlation.rs  data.rs  export.rs  ingest.rs  mod.rs  patterns.rs  physical.rs  processor.rs  projects.rs  segmentation.rs  session.rs  signatures.rs  system.rs  wireshark.rs
src/lib/components/: AnalysisView.svelte  BaselineDriftView.svelte  CaptureView.svelte  CommunicationPatterns.svelte  ConnectionTree.svelte  ExportView.svelte  FilteredView.svelte  InventoryView.svelte  LogicalView.svelte  MeshView.svelte  PhysicalView.svelte  ProjectsView.svelte  ProtocolStats.svelte  PurdueOverlay.svelte  SegmentationView.svelte  SettingsView.svelte  SignatureEditor.svelte  TimelineScrubber.svelte  TopologyView.svelte  WatchTab.svelte
src/lib/layouts/: purdueLayout.ts
src/lib/stores/: index.ts
src/lib/types/: cytoscape-fcose.d.ts  index.ts
src/lib/utils/: graph.ts  tauri.ts  tauri.ts:Zone.Identifier
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tests/pcaps/: README.md
