[package]
name = "kusanaginokajiki"
version = "0.1.0"
edition = "2021"
description = "Modern ICS/SCADA passive network discovery tool"
license = "Apache-2.0"
authors = ["David"]
rust-version = "1.77"

[workspace]
members = [
    ".",
    "crates/gm-capture",
    "crates/gm-parsers",
    "crates/gm-signatures",
    "crates/gm-topology",
    "crates/gm-db",
    "crates/gm-physical",
    "crates/gm-ingest",
    "crates/gm-report",
    "crates/gm-analysis",
]

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Workspace crates
gm-capture = { path = "crates/gm-capture" }
gm-parsers = { path = "crates/gm-parsers" }
gm-topology = { path = "crates/gm-topology" }
gm-db = { path = "crates/gm-db" }
gm-signatures = { path = "crates/gm-signatures" }
gm-physical = { path = "crates/gm-physical" }
gm-ingest = { path = "crates/gm-ingest" }
gm-report = { path = "crates/gm-report" }
gm-analysis = { path = "crates/gm-analysis" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Platform directories
dirs = "6"

# UUID generation for asset IDs
uuid = { version = "1", features = ["v4"] }

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Session archive ZIP support
zip = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
