[package]
name = "gm-analysis"
version = "0.1.0"
edition = "2021"
description = "MITRE ATT&CK for ICS detection, Purdue Model assignment, and anomaly scoring"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
