[package]
name = "gm-segmentation"
version = "0.1.0"
edition = "2021"
description = "Microsegmentation recommendation engine: identity groups, IEC 62443 zones, enforcement configs, policy simulation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
